fixed hero title line spacing

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ header {
 .hero__title {
     font-family: "Oswald", sans-serif;
     font-size: 4.5rem;
-    line-height: 4.5rem;
+    line-height: 4.8rem;
     margin: 0 0 .75em 0;
     letter-spacing: .03rem;
     max-width: 600px;
